# Home-Automation

./: Readme.md  index.html  simulation.html
mqqt_client/src/: main.cpp  test.html
mqtt_client/: platformio.ini
mqtt_client/src/: main.cpp
server/: .env  .env.example  .gitignore  Cargo.toml  README.md
server/migrations/: 001_initial.sql  data.sql
server/src/: db.rs  error.rs  main.rs  models.rs  mqtt.rs  state.rs  ws.rs
server/src/routes/: control.rs  mod.rs  sensors.rs  status.rs
